--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "cross-fetch": "^3.0.6",
     "node-sass": "^4.14.1",
     "react": "^16.0.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.0.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "1.0.17",
